General Loc work and Russia stuff

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -180,12 +180,12 @@
   French.6.b:0 "We should look into this"
 
   French.7.t:0 "Reports of SP Mobilization"
-  French.7.d:0 ""
+  French.7.d:0 "Whether the claims are true or not the fact that the city streets lie empty is telling of something. Individuals have gone missing at an absurd rate and concerns are mounting regarding the SP. Darnand hasn’t been seen for the past three days and his where abouts are unknown, if foul play is at hand then Maurras and Armand best be worried, after all they would be the main targets for this hypothetical coup. Despite the internal panic local authorities have maintained a neutral attitude on the topic, promising no loyalty to either of the three candidates. Whether such promises are valid is unknown and some have even begun to suspect that the constabulary is under Doriot’s arm."
   French.7.a:0 "Demand they end their mobilization!"
   French.7.b:0 "Issue a minor protest"
 
   French.8.t:0 "Doriot sends out the Lists"
-  French.8.d:0 ""
+  French.8.d:0 "Despite the lack of discipline, the SP proved to be a brutally effective mob. Their tactics were undoubtedly questionable but in times of great strife the rules of “war” change; and the definition of sane in an insane world is quite the ironic remark. Men tormented both physically and mentally resorted to this state funded police force, here they could avenge all the years of pain with little jurisdiction. Their mere presence birthed fearful stares in the least humane way possible, after all everyone knew their purpose, they simply wondered who; who would be their next victim. Would it be a Jew? A drunk? Or a young woman? They were beasts of no nation, with no grand moral leader, no fathers or mothers, no job opportunities, they were the perfect killing machines and kill they did. When Doriot handed Darnard the lists his henchmen salivated at the untold stories they were about to write, the rapes and murders of thousands was about to take place and not even God knew how to handle the situation; yet he still showed pity like all the rest."
   French.8.a:0 "The orders are intercepted!"
   French.8.b:0 "The orders are delivered as expected"
 
@@ -628,7 +628,7 @@
   French_flavour.18.a:0 "A ship to rival all of Britannia"
 
   French_flavour.19.t:0 "Suspicious Citizen Number: 8012234"
-  French_flavour.19.d:0 ""
+  French_flavour.19.d:0 "Target: 8012234\n\nName: Julien\n\nSurname: Couture\n\nDOB: 21/06/1905\n\nSex: Male\n\nFeatures:\nWhite pale skin with brown hair and blue eyes. He is often found wearing trench coat like clothing though that may be attributed to his recent actions. It is advised that you question locals to gain further knowledge.\n\nReasoning:\nEye witnesses account Mr. Couture entering a suspected Jewish safe haven on numerous occasions, each occasion he is seen holding provisions of all sorts albeit with no definitive knowledge on why he is bringing such provisions in to his place of work when questioned by local authorities. He is suspected to be harbouring Jews in his clothing store that he owns though a recent raid has found nothing of confirming material, more investigation may be required to reach suspected results. His mother was also recently hanged for failing to comply with orders (unspecified) given by SP individuals. Chief commissioner has recommended that Mr. Couture be removed despite the lacking intel.\n\nCONFIRMATION CODE: 57385719\n\nThis person will be considered dead upon the handing of this file unless otherwise advised. "
   French_flavour.19.a:0 "Find Them, Now!"
 
   French_flavour.20.t:0 "Connecting France"
