--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -1,6 +1,11 @@
 ﻿l_english:
 
   ##########################
+  #Traits
+  ##########################
+  popular_queen:0 "Popular Queen"
+
+  ##########################
   #POP HAPPINESS
   ##########################
   PB_RUS_Nobility_Satisfaction_Growth_1.5_tt:0 "Nobility Satisfaction Growth Will Change By §G+1.5§!"
@@ -39,7 +44,7 @@
   PB_RUS_Peasants_Satisfaction_Growth_0.5_Neg_tt:0 "Peasant Satisfaction Growth Will Change By §R-0.5§!"
 
   PB_RUS_Decisions_Pop_Happiness:0 "The Russian State"
-  PB_RUS_Decisions_Pop_Happiness_desc:0 "\n                                                   Social Class Satisfaction Levels\n\n\n\n\n\n\n\n\n\n\n\n\nThe Rusisan nation is full of different social classes; mainly divided into The Nobility, The Elites, The Military, The Workers, and The Peasants. Maintaining a happy populace is key in ensuring a stable and war ready nation, meeting/not meeting the wants of these classes will grant various buffs/debuffs accordingly. Growth is a monthly measure of a specific classes change in happiness, it can either read positive, negative or neutral variables with said variables being either 0.5, 1, or 1.5.\n"
+  PB_RUS_Decisions_Pop_Happiness_desc:0 "\n                                                   Social Class Satisfaction Levels\n\n\n\n\n\n\n\n\n\n\n\n\nThe Rusisan nation is full of different social classes; mainly divided into The Nobility, The Elites, The Military, The Workers, and The Peasants. Maintaining a happy populace is key in ensuring a stable and war ready nation, meeting/not meeting the wants of these classes will grant various buffs/debuffs accordingly. Growth is a weekly measure of a specific classes change in happiness, it can either read positive, negative or neutral variables with said variables being either 0.5, 1, or 1.5.\n"
 
   RUS_Nobility_Satisfaction_High:0 "  £RUS_Nobility\n\n\nThe Nobility\nAre §GPleased§!"
   RUS_Nobility_Satisfaction_Med:0 "  £RUS_Nobility\n\n\nThe Nobility\nAre §YContent§!"
@@ -100,6 +105,48 @@
   RUS_Peasants_Satisfaction_Growth_Med_Neg:0 "Growth:\n\n£RUS_Arrow_Down\n\n§R-1§!"
   RUS_Peasants_Satisfaction_Growth_Low_Neg:0 "Growth:\n\n£RUS_Arrow_Down\n\n§R-0.5§!"
   RUS_Peasants_Satisfaction_Growth_Zero:0 "Growth:\n\n£RUS_Arrow_Neutral\n\n§Y0§!"
+
+  PB_RUS_Nobility_Satisfaction_1.5_tt:0 "Nobility Satisfaction Will Greatly §GImprove§!"
+  PB_RUS_Nobility_Satisfaction_1_tt:0 "Nobility Satisfaction Will §GImprove§!"
+  PB_RUS_Nobility_Satisfaction_0.5_tt:0 "Nobility Satisfaction Will Slightly §GImprove§!"
+
+  PB_RUS_Nobility_Satisfaction_1.5_Neg_tt:0 "Nobility Satisfaction Will Greatly §RRegress§!"
+  PB_RUS_Nobility_Satisfaction_1_Neg_tt:0 "Nobility Satisfaction Will §RGRegress§!"
+  PB_RUS_Nobility_Satisfaction_0.5_Neg_tt:0 "Nobility Satisfaction Will Slightly §RRegress§!"
+
+  PB_RUS_Elites_Satisfaction_1.5_tt:0 "Elite Satisfaction Will Greatly §GImprove§!"
+  PB_RUS_Elites_Satisfaction_1_tt:0 "Elite Satisfaction Will §GImprove§!"
+  PB_RUS_Elites_Satisfaction_0.5_tt:0 "Elite Satisfaction Will Slightly §GImprove§!"
+
+  PB_RUS_Elites_Satisfaction_1.5_Neg_tt:0 "Elite Satisfaction Will Greatly §RRegress§!"
+  PB_RUS_Elites_Satisfaction_1_Neg_tt:0 "Elite Satisfaction Will §RGRegress§!"
+  PB_RUS_Elites_Satisfaction_0.5_Neg_tt:0 "Elite Satisfaction Will Slightly §RRegress§!"
+
+  PB_RUS_Military_Satisfaction_1.5_tt:0 "Military Satisfaction Will Greatly §GImprove§!"
+  PB_RUS_Military_Satisfaction_1_tt:0 "Military Satisfaction Will §GImprove§!"
+  PB_RUS_Military_Satisfaction_0.5_tt:0 "Military Satisfaction Will Slightly §GImprove§!"
+
+  PB_RUS_Military_Satisfaction_1.5_Neg_tt:0 "Military Satisfaction Will Greatly §RRegress§!"
+  PB_RUS_Military_Satisfaction_1_Neg_tt:0 "Military Satisfaction Will §RGRegress§!"
+  PB_RUS_Military_Satisfaction_0.5_Neg_tt:0 "Military Satisfaction Will Slightly §RRegress§!"
+
+  PB_RUS_Workers_Satisfaction_1.5_tt:0 "Worker Satisfaction Will Greatly §GImprove§!"
+  PB_RUS_Workers_Satisfaction_1_tt:0 "Worker Satisfaction Will §GImprove§!"
+  PB_RUS_Workers_Satisfaction_0.5_tt:0 "Worker Satisfaction Will Slightly §GImprove§!"
+
+  PB_RUS_Workers_Satisfaction_1.5_Neg_tt:0 "Worker Satisfaction Will Greatly §RRegress§!"
+  PB_RUS_Workers_Satisfaction_1_Neg_tt:0 "Worker Satisfaction Will §RGRegress§!"
+  PB_RUS_Workers_Satisfaction_0.5_Neg_tt:0 "Worker Satisfaction Will Slightly §RRegress§!"
+
+  PB_RUS_Peasants_Satisfaction_1.5_tt:0 "Peasant Satisfaction Will Greatly §GImprove§!"
+  PB_RUS_Peasants_Satisfaction_1_tt:0 "Peasant Satisfaction Will §GImprove§!"
+  PB_RUS_Peasants_Satisfaction_0.5_tt:0 "Peasant Satisfaction Will Slightly §GImprove§!"
+
+  PB_RUS_Peasants_Satisfaction_1.5_Neg_tt:0 "Peasant Satisfaction Will Greatly §RRegress§!"
+  PB_RUS_Peasants_Satisfaction_1_Neg_tt:0 "Peasant Satisfaction Will §RGRegress§!"
+  PB_RUS_Peasants_Satisfaction_0.5_Neg_tt:0 "Peasant Satisfaction Will Slightly §RRegress§!"
+
+  PB_RUS_All_Satisfaction_tt:0 "All Social Classes Satisfaction Will Greatly §GImprove§!"
 
   ##########################
   #POWER STRUGGLE
