--- a/localisation/PB_Italy_l_english.yml
+++ b/localisation/PB_Italy_l_english.yml
@@ -21,6 +21,39 @@ PB_ITA_Left_Milita_Support_desc:0 "Desperate times call for desperate measures. 
 PB_ITA_Left_Milita_Support_1:0 "Against Revanchism" 
 PB_ITA_Left_Milita_Support_1_desc:0 "Desperate times call for desperate measures. The growing left-wing of Italian politics has been semi-involved in the conflict, fighting against the ANI and the reactionary threat it represents. However, active involvement from the jacobin and socialist parties remain limited, so a deal is needed if we want their full support."
 
+PB_ITA_PSI_rises_to_power:0 "Victory for the PSI"
+PB_ITA_The_Nullista_Clique:0 "Bombacci's View on Maximalism"
+PB_ITA_The_Maximalist_Mainstream:0 "Consolidate the Maximalist Movement"
+PB_ITA_Reforming_Suffrage:0 "Reform Electoral Suffrage"
+PB_ITA_Break_Elitist_Democracy:0 "Break Limited Democracy"
+PB_ITA_They_who_hold_half_the_sky:0 "Women hold up half the Sky"
+PB_ITA_Refuse_Capitalist_Cooperation:0 "Refuse Cooperation with Capitalists"
+PB_ITA_Label_them_Social_Imperialists:0 "Label them \"Social Imperialists\""
+PB_ITA_Mobilize_the_People:0 "Mobilize the Peasants"
+PB_ITA_Answer_against_White_Terror:0 "Rural Red Terror"
+PB_ITA_Embrace_Pure_Maximalism:0 "Pure Maximalism"
+PB_ITA_Keeping_the_Party_Together:0 "Limit Bombacci's Vision"
+PB_ITA_Vanguard_of_the_Proletariat:0 "Vangaurd of the Proletariat"
+PB_ITA_Further_Radicalize_the_Party:0 "Mistrust the Pigs in Suits"
+PB_ITA_Revolution_by_Ballot:0 "Revolution by Ballot"
+PB_ITA_Reform_through_Democracy:0 "Embrace Democratic Methodes"
+PB_ITA_Consider_Minimum_Wage:0 "Implement Minimum Wage"
+PB_ITA_Enshrine_Labourers_Rights:0 "Protect Workers Rights"
+PB_ITA_Caring_State_Vision:0 "A Social Revolution"
+PB_ITA_Big_Tent_Maximalism:0 "Modigliani's Big Tent"
+PB_ITA_Bombacci_goes_Solo:0 "Against Moderate Revisionism" 
+PB_ITA_PSU_rises_to_power:0 "Victory for the PSU"
+PB_ITA_Party_of_Turati:0 "Party of Turati"
+PB_ITA_Rethink_Bakunin:0 "Rethink Bakuninist Philosophy"
+PB_ITA_Expand_Union_Freedom:0 "Support the CGdL"
+PB_ITA_Introduce_Workplace_Democracy:0 "Limited Workplace Democracy"
+PB_ITA_Rosselli_Liberal_Socialism:0 "Shake Hands with Rosselli"
+PB_ITA_Friends_with_the_King:0 "Improve Rural Education"
+PB_ITA_Poverty_Relief_Act:0 "Poverty Relief Act"
+PB_ITA_Nationalize_Key_Assets:0 "Nationalize Key Sectors"
+PB_ITA_Rosselli_takes_the_Wheel:0 "Rosselli's Spin on Socialism"
+PB_ITA_Buozzi_Succeeds:0 "Party of Unionists" 
+
 PB_The_Diplomatic_King:0 "The Charming King"
 
 ITA_Militias:0 "Bread and Butter Militias"
