oh boy colonialism time

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -300,6 +300,9 @@
   RUS_kirill_new_slav_modifier:0 "The §ONew Slav§!"
   RUS_kirill_optimised_colonial_policy:0 "Optimised Colonial Policy"
   RUS_kirill_eased_purification:0 "Eased Purification"
+  RUS_kirill_european_advisors:0 "European Advisors"
+  RUS_kirill_european_experts:0 "European Experts"
+  RUS_kirill_boon_of_africa:0 "Boons of Africa"
   ##########################
   # EVENTS
   ##########################
@@ -537,7 +540,25 @@
   RUS_kirill.24.a:0 "Long live the Greater Empire"
   RUS_kirill.25.t:0 "Expanding the Net"
   RUS_kirill.25.d:0 ""
-  RUS_kirill.25.a:0 "lamo"
+  RUS_kirill.25.a:0 "To Africa!"
+  RUS_kirill.26.t:0 "Contacting the Sagallo Host"
+  RUS_kirill.26.d:0 ""
+  RUS_kirill.26.a:0 "Send the message"
+  RUS_kirill.27.t:0 "The Russians offer us a deal"
+  RUS_kirill.28.t:0 "The Host Enters the Fold"
+  RUS_kirill.28.d:0 ""
+  RUS_kirill.28.a:0 "Ready the Fleet!"
+  RUS_kirill.29.t:0 "Sending the Order"
+  RUS_kirill.29.d:0 ""
+  RUS_kirill.29.a:0 "Go forth and exapnd the Empire!"
+  RUS_kirill.30.t:0 "The New African Governate"
+  RUS_kirill.30.d:0 ""
+  RUS_kirill.30.a:0 "A New Gem to the Tsar's Crown"
+  RUS_kirill.31.t:0 "What to do with East Africa"
+  RUS_kirill.31.d:0 ""
+  RUS_kirill.31.a:0 "A Proud new home for Cossack people"
+  RUS_kirill.31.b:0 "An Extension of Russian Indsutry"
+  RUS_kirill.31.c:0 "A New Gem to the Tsar's Crown"
   # ALEXEI EVENTS #
   RUS_alexei.1.t:0 "Alexei Ascends to Power"
   RUS_alexei.1.d:0 "placeholder"
@@ -691,27 +712,25 @@
   PB_RUS_kirill_autonomies_into_states:0 "Autonomies Into States"
   PB_RUS_kirill_easing_on_russification:0 "Easing on Russification"
   PB_RUS_kirill_heia_slavia:0 "Heia Slavia"
-  PB_RUS_kirill_developing_russian_east_africa:0 "Developing Russian East Africa"
-  PB_RUS_kirill_encouraging_cossack_settlement:0 "Encouraging Cossack Settlement"
-  PB_RUS_kirill_taming_african_horses:0 "Taming African Horses"
-  PB_RUS_kirill_african_environmental_training:0 "African Environmental Training"
-  PB_RUS_kirill_the_founding_new_zimoveysakaya:0 "The Founding of New Zimoveysakaya"
-  PB_RUS_kirill_making_use_native_labor:0 "Making Use of Native Labor"
-  PB_RUS_kirill_hiring_european_experts:0 "Hiring European Experts"
-  PB_RUS_kirill_creating_profitable_colony:0 "Creating a Profitable Colony"
-  PB_RUS_kirill_russias_african_success:0 "Russia's African Success"
-  PB_RUS_kirill_developing_russian_merchant_marine:0 "Developing the Russian Merchant Marine"
-  PB_RUS_kirill_east_beckons:0 "The East Beckons Us"
-  PB_RUS_kirill_sultan_of_aceh:0 "The Sultan of Aceh"
-  PB_RUS_kirill_offer_them_our_skills:0 "Offer Them Our Skills"
-  PB_RUS_kirill_enjoy_russian_luxury:0 "Enjoy Russian Luxury"
-  PB_RUS_kirill_thailand_plans:0 "Thailand Plans"
-  PB_RUS_kirill_arming_pretender:0 "Arming the Pretender"
-  PB_RUS_kirill_welcome_to_russian_sphere:0 "Welcome to the Russian Sphere"
-  PB_RUS_kirill_chinese_mayhem:0 "Chinese Mayhem"
-  PB_RUS_kirill_russian_opportunity:0 "Russian Opportunity"
-  PB_RUS_kirill_these_lands_belong_mongolia:0 "These Lands Belong to Mongolia"
-  PB_RUS_kirill_eagle_flies_east:0 "The Eagle Flies to the East"
+  PB_RUS_kirill_supporting_our_african_brothers:0 "Contacting the Lost Host"
+  PB_RUS_kirill_supply_them_with_troops:0 "Supply Them With Troops"
+  PB_RUS_kirill_supply_them_with_guns:0 "Supply Them With Guns"
+  PB_RUS_kirill_supply_advisors:0 "Provide Advisors"
+  PB_RUS_kirill_expand_african_host:0 "Provoke a Conflict with Ethopia"
+  PB_RUS_kirill_troops_to_help_the_war:0 "Send More Soldiers to Help"
+  PB_RUS_kirill_awaken_the_cossack_bear:0 "Rouse the Coassack Bear"
+  PB_RUS_kirill_guns_to_help_the_war:0 "Guns to Help the War"
+  PB_RUS_kirill_victory_in_the_cossack_war:0 "Victory in the Cossack War"
+  PB_RUS_kirill_developing_russian_merchant_marine:0 "Develop the Russian Merchant Marine"
+  PB_RUS_kirill_the_new_governate:0 "The New Governate"
+  PB_RUS_kirill_encourge_cossack_settlement:0 "Encourge Cossack Settlement"
+  PB_RUS_kirill_expand_african_industry:0 "Expand African Industry"
+  PB_RUS_kirill_exploit_their_population:0 "Exploit Their Population"
+  PB_RUS_kirill_founding_new_zimoveysakaya:0 "The Founding of New Zimoveysakaya"
+  PB_RUS_kirill_expand_the_dockyards:0 "Expand the Dockyards"
+  PB_RUS_kirill_hire_european_experts:0 "Hire European Experts"
+  PB_RUS_kiril_a_profitable_colony:0 "Creating a Profitable Colony"
+  PB_RUS_kiril_russias_african_success:0 "Russia's African Success"
   #ALEXEI FOCUS
   PB_RUS_alexei_ascendant:0 "§RAlexei Ascendant§!"
   PB_RUS_alexei_ascendant_desc:0 "placeholder"
@@ -1468,6 +1487,10 @@
   PB_RUS_kirill_new_slav_number_stats_loc_yes:0 "\n§YStrength:§! [?PB_RUS_kirill_new_slav_strength|%0]/[?PB_RUS_kirill_new_slav_strength_threshold|%0]\n§YSpeed:§! [?PB_RUS_kirill_new_slav_speed|%0]/[?PB_RUS_kirill_new_slav_speed_threshold|%0]\n§YDefence:§! [?PB_RUS_kirill_new_slav_defence|%0]/[?PB_RUS_kirill_new_slav_defence_threshold|%0]\n§YAdaptability:§! [?PB_RUS_kirill_new_slav_adaptability|%0]/[?PB_RUS_kirill_new_slav_adaptability_threshold|%0]"
   PB_RUS_kirill_new_slav_sanity_loc_yes:0 "\n§YSanity:§! [?PB_RUS_kirill_new_slav_sanity|%0]"
 
+ # KIRILL Flags #
+  RUS_kirill_east_africa_accept:0 "The East Africans have accepted the deal"
+  RUS_kirill_host_ethopia_war_victory:0 "The Host has Won the War"
+  RUS_kirill_host_ethopia_war_defeat:0 "The Host has Lost the War"
  # Alexei Flags #
  PB_RUS_alexei_wins:0 "Alexei has Initiated his Coup"
  PB_RUS_alexei_loses:0 "Alexei has been toppled in a Counter-Coup"
