Germany Pushing Ja Franz
- FOcus Icons
- focus tree work
- decision work
- variables work

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -47,7 +47,7 @@
   PB_GER_Economic_Depression_Recovery_3:0 "Near Complete Recovery"
   PB_GER_Womens_Suffrage:0 "Women's Suffrage"
   PB_GER_Prussian_Occupation:0 "Occupation of Prussia"
-  PB_GER_Standardized_Military:0 "A Standardized Military"
+  PB_GER_Equal_States:0 "Balanced State Power"
   PB_GER_Bismarckian_Welfare:0 "Bismarckian Welfare State"
   PB_GER_German_Unity:0 "Germanic Unity"
   PB_GER_Freikorps_Integration:0 "Freikorps Integration"
@@ -226,7 +226,7 @@
   PB_GER_European_Trade_Initiative:0 "Incentivizing Venture Capitalists"
   PB_GER_Ally_with_the_KDG:0 "Creating a Culture of Development"
   PB_GER_Ally_with_Krupp:0 "Providing Corporate Subsidies"
-  PB_GER_Royal_German_Coal_and_Steel:0 "Königlich Deutsche Kohle und Stahl"
+  PB_GER_Royal_German_Coal_and_Steel:0 "Truly Industrialising the Aircraft Industry"
   PB_GER_European_Common_Market:0 "Establish a Common German Market"
   PB_GER_Develop_Domestic_Arms:0 "Develop the Domestic Arms Industry"
   PB_GER_Expand_Heidelberg_University:0 "Expand Heidelberg University"
@@ -247,7 +247,7 @@
   PB_GER_Volkswagen:0 "The Autobahn"
   PB_GER_Establish_Mittleuropa:0 "Mittleuropa"
   PB_GER_Develop_Istria:0 "Develop the Mediterranean Coast"
-  PB_GER_Rare_Minerals:0 "Expand Rare Minerals Extraction"
+  PB_GER_Rare_Minerals:0 "Expand Coal and Steel Extraction"
   PB_GER_Agriculture_Mechanization:0 "Mechanization of Agriculture"
   PB_GER_Central_European_Pillar:0 "The Central Pillar of Europe"
 
@@ -868,16 +868,20 @@
   GER_Elsass_Unrest_Increase_Five_tt:0 "§YAlsatian Unrest will be increased by§! §R5§!\n"
   GER_Frankfurt_Unrest_Increase_Five_tt:0 "§YHessian Unrest will be increased by§! §R5§!\n"
 
-  GER_All_Unrest_Reduce_Five_tt:0 "§YAll Unrest will be reduced by§! §G5%§!\n"
-  GER_All_Unrest_Reduce_Ten_tt:0 "§YAll Unrest will be reduced by§! §G10%§!\n"
-  GER_All_Unrest_Reduce_Twenty_tt:0 "§YAll Unrest will be reduced by§! §G20%§!\n"
+  GER_All_Unrest_Reduce_Five_tt:0 "§YAll Unrest will be reduced by§! §G5§!\n"
+  GER_All_Unrest_Reducce_Ten_tt:0 "§YAll Unrest will be reduced by§! §G10§!\n"
+  GER_All_Unrest_Reduce_Fiveteen_tt:0 "§YAll Unrest will be reduced by§! §G15§!\n"
+  GER_All_Unrest_Reduce_Twenty_tt:0 "§YAll Unrest will be reduced by§! §G20§!\n"
 
   GER_All_Unrest_Increase_Five_tt:0 "§YAll Unrest will be increased by§! §R5%§!\n"
   GER_All_Unrest_Increase_Ten_tt:0 "§YAll Unrest will be increased by§! §R10%§!\n"
   GER_All_Unrest_Increase_Twenty_tt:0 "§YAll Unrest will be increased by§! §R20%§!\n"
 
   PB_GER_All_Unrest_Under_Fifty_tooltip:0 "§YUnrest in all Autonomies is below§! §R50%§!\n"
+  PB_GER_All_Unrest_Under_25_tooltip:0 "§YUnrest in all Autonomies is below§! §R25%§!\n"
   GER_Unrest_Cleared:0 "§YUnrest in all Autonomies is permanently cleared§!\n"
+
+  GER_All_Unrest_Condition_Fiveteen_tt:0 "All Volksstaaten have atleast §R15§! Unrest"
 
   PB_GER_Event_Unrest_Fifty_Fifty:0 "There is a §Y50%§! chance that unrest in this province will be reduced by 10% and a §Y50%§! that unrest will increase by 10%"
 
