Some Loc Work And General Re-Balancing

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -204,8 +204,8 @@
   French.11.a:0 "This is a betrayal of the triumvirate!"
 
   French.12.t:0 "The Armandists turn on Maurras"
-  French.12.d:0 ""
-  French.12.a:0 "A new dawn is at hand..."
+  French.12.d:0 "Great sacrifices have been made repelling the sadistic SP mob which assaulted the coalition of socialists and monarchists. However all this would be for nought if the monarchists were allowed to return to power. They still gripped the old ways of tradition and aristocracy which so willingly put the common people of France through the Great War. If the coalition must be broken then so be it.. We shall disarm the monarchists for the betterment of France and install Armand as the rightful saviour of the French people. Armand shall become the defender of France and we; the French people shall be her blazing sword, even if it means cutting off the limb of traditionalism. Paris, in all its beauty, tells a depressing story from a bygone age; its woes, its struggles, and its ascendance will all be remembered but its existence will alter beyond recognition. As the fires of revolution spread, Paris, though old, will be reborn and with it a new era of thinking shall emerge. Empires, Kings, and Queens will experience the very pain France had to suffer; the word mercy from this point on will take a sinister definition and Maurras' clique will be the first to hear it, France shall be reborn tonight."
+  French.12.a:0 "A New Dawn Is At Hand..."
 
   French.13.t:0 "The Bourbon Restoration"
   French.13.d:0 ""
@@ -232,7 +232,7 @@
   French.18.a:0 "The Church shall be swept away, as with all things against the New State."
 
   French.19.t:0 "The Remilitarization of Lorraine"
-  French.19.d:0 ""
+  French.19.d:0 "When the Kaiser enforced the Treaty of Tours onto the Bourbon dynasty German high command remained hopeful on the effectiveness such a treaty would have on preventing another World War; if only they knew. With revanchist fervour at an all time high and our armed forces rapidly expanding the bureaucrats in Frankfurt know damn well what we all want. The Remilitarization of Lorraine is but the first step in a series of processes to ensure total French hegemony in the following years, before we know it our troops will be marching through the cities of Berlin, Vienna, and Munich singing and dancing like the Germans did so long ago. Yet we shall go the extra step, not only will we guarantee that Germany remains neutered from global affairs, but we will fundamentally change their society as a whole. Afterall revenge isn’t about defeating one’s nation, but to make that very nation incapable of existing, for the rest of time. "
   French.19.a:0 "The Treaty of Tours is dead."
 
   French.20.t:0 "French Troops in Lorraine"
