--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -1263,6 +1263,7 @@
 
   # ALEXANDRA TOOLTIPS #
   PB_RUS_The_Rich_Get_Richer_tt:0 "\nThe Minimum Value For Nobility And Elite Happiness Will be §PRaised§!"
+  PB_RUS_Mobilize_The_Cliques_tt:0 "\nThe Minimum Value For Military Happiness Will be §PRaised§!"
 
   # ALEXEI TOOLTIPS #
   PB_RUS_alexei_tooltip_1:0 "With the state secured, we can finally move to establish our §G'New World Order'§!"
