--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -341,7 +341,7 @@
   PBNews.88.a:0 "An Alliance Out Of Necessity?"
 
   PBNews.89.t:0 "TASMANIAN TIGER: EXTINCT!"
-  PBNews.89.d:0 ""  
+  PBNews.89.d:0 "The Grand Victorian Exhibition in Greater Sydney declared at 9:00 AM this morning that the last known Tasmanian Tiger had passed away peacefully in its enclosure.  The scientific world is both stunned and saddened by such a tragedy and major efforts have already taken place at preserving the animal’s corpse for future research. There have been apparent local sightings of other Tasmanian Tigers though such reports haven’t produced anything of confirming material, as this current moment the last member of the Thylacine species group is officially extinct. The Grand Victorian Exhibition has planned to resurrect a statue of the animal in its memory to replace the now empty enclosure.  "  
   PBNews.89.a:0 "Such A Shame"
 
   PBNews.90.t:0 "MOUNT EVEREST CONQUERED"
@@ -361,11 +361,11 @@
   PBNews.93.a:0 "A Football Wonder"
 
   PBNews.94.t:0 "WALLONIAN CRISIS ESCALATES"
-  PBNews.94.d:0 ""
+  PBNews.94.d:0 "With the rise of Germany and France as the main powers on the European Mainland, booths sides have made attempts to expand their borders and influence to outdo the other. But today, such a game of Chess has plunged Europe into war. The French government recently made an attempt to force Wallonia into capitulation, threatening war in they refused. In response, Germany came to the aid of the Wallonian government. Despite this, France refused to back down and has since declared war on Wallonian. With Germany mobilizing against France in response, Europe now finds itself in the middle of a major war between these two powers."
   PBNews.94.a:0 "My God it has begun"
 
   PBNews.95.t:0 "WALLONIAN CRISIS RELAXES"
-  PBNews.95.d:0 ""
+  PBNews.95.d:0 "With the rise of Germany and France as the main powers on the European Mainland, booths sides have made attempts to expand their borders and influence to outdo the other. Fortunately, Germany has proven itself a formidable foe, enough to make France bend. The French government recently made an attempt to force Wallonia into capitulation, threatening war in they refused. In response, Germany came to the aid of the Wallonian government. Rather than risk all-out war, the French government-backed down for its claims. Many within both Wallonia and Germany are celebrating the diplomatic victory. Taking it as proof that Germany is an effective counterbalance to France. The French government has refused to comment on these events. "
   PBNews.95.a:0 "How much longer can Europe last?"
 
   PBNews.96.t:0 "DUTCH CRISIS ESCALATES"
