--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -341,7 +341,7 @@
   PBNews.88.a:0 "An Alliance Out Of Necessity?"
 
   PBNews.89.t:0 "TASMANIAN TIGER: EXTINCT!"
-  PBNews.89.d:0 "The Grand Victorian Exhibition in Greater Sydney declared at 9:00 AM this morning that the last known Tasmanian Tiger had passed away peacefully in its enclosure.  The scientific world is both stunned and saddened by such a tragedy and major efforts have already taken place at preserving the animal’s corpse for future research. There have been apparent local sightings of other Tasmanian Tigers though such reports haven’t produced anything of confirming material, as this current moment the last member of the Thylacine species group is officially extinct. The Grand Victorian Exhibition has planned to resurrect a statue of the animal in its memory to replace the now empty enclosure.  "  
+  PBNews.89.d:0 "The Grand Victorian Exhibition in Greater Sydney declared at 9:00 AM this morning that the last known Tasmanian Tiger had passed away peacefully in its enclosure.  The scientific world is both stunned and saddened by such a tragedy and major efforts have already taken place at preserving the animal’s corpse for future research. At this current moment the last member of the Thylacine species group is officially extinct. The Grand Victorian Exhibition has planned to resurrect a statue of the animal in its memory to replace the now empty enclosure."  
   PBNews.89.a:0 "Such A Shame"
 
   PBNews.90.t:0 "MOUNT EVEREST CONQUERED"
