--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -329,7 +329,7 @@
   PBNews.85.a:0 "Another nation gone dark"
 
   PBNews.86.t:0 "FRANCE MARCHES TO WALLONIA"
-  PBNews.86.d:0 "With the French government’s noticeable rise in Revanchism, few were surprised when they called for the Wallonia’s surrender. The small landlocked nation immediately requested support from the United Kingdoms of Germany, but no such support was provided, leaving them to fend for themselves. Despite the overwhelming size of the French military when compared to Wallonia, they have refused to capitulate. The Wallonian government has called for its people to resist the ‘force of French Revanchism’ in any way they can hoping to cost the French as many soldiers as possible. Despite this heroic resistance, few hold out hope for a Wallonian victory."  
+  PBNews.86.d:0 "With the French government’s noticeable rise in Revanchism, few were surprised when they called for the Wallonia’s surrender. The small landlocked nation immediately requested support from the United Kingdoms of Germany, but no such support was provided, leaving them to fend for themselves. Despite the overwhelming size of the French military when compared to Wallonia, they have refused to capitulate. The Wallonian government has called for its people to resist the ‘force of French Revanchism’ in any way they can hoping to cost the French as many soldiers as possible."  
   PBNews.86.a:0 "Like Fighting The Ocean With A Bucket"
 
   PBNews.87.t:0 "FRANCE DECLARES WAR ON GERMANY"
@@ -341,7 +341,7 @@
   PBNews.88.a:0 "An Alliance Out Of Necessity?"
 
   PBNews.89.t:0 "TASMANIAN TIGER: EXTINCT!"
-  PBNews.89.d:0 "The Grand Victorian Exhibition in Greater Sydney declared at 9:00 AM this morning that the last known Tasmanian Tiger had passed away peacefully in its enclosure.  The scientific world is both stunned and saddened by such a tragedy and major efforts have already taken place at preserving the animal’s corpse for future research. At this current moment the last member of the Thylacine species group is officially extinct. The Grand Victorian Exhibition has planned to resurrect a statue of the animal in its memory to replace the now empty enclosure."  
+  PBNews.89.d:0 "The Grand Victorian Exhibition Center in Greater Sydney declared at 9:00 AM this morning that the last known Tasmanian Tiger had passed away peacefully in its enclosure.  The scientific world is both stunned and saddened by such a tragedy and major efforts have already taken place at preserving the animal’s corpse for future research. At this current moment the last member of the Thylacine species group is officially extinct. The Grand Victorian Exhibition Center has planned to resurrect a statue of the animal in its memory to replace the now empty enclosure."  
   PBNews.89.a:0 "Such A Shame"
 
   PBNews.90.t:0 "MOUNT EVEREST CONQUERED"
