Kirill's military trees are complete

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -315,6 +315,14 @@
   RUS_kirill_european_advisors:0 "European Advisors"
   RUS_kirill_european_experts:0 "European Experts"
   RUS_kirill_boon_of_africa:0 "Boons of Africa"
+  RUS_kirill_never_stop_moving:0 "Never Stop Moving"
+  RUS_kirill_air_land_unified_command:0 "Air-Land Unified Command"
+  RUS_kirill_bloody_warfare:0 "Bloody Warfare"
+  RUS_kirill_imperial_commissars:0 "Imperial Commissars"
+  RUS_kirill_mass_produced_heroism:0 "Mass Produced Heroism"
+  RUS_kirill_will_of_the_tsar:0 "Will of the Tsar"
+  RUS_kirill_french_naval_expertice:0 "French Naval Expertice"
+  RUS_kirill_peter_the_greats_dream_furfilled:0 "Peter the Great's Dream Furfilled"
   ##########################
   # EVENTS
   ##########################
@@ -743,6 +751,31 @@
   PB_RUS_kirill_hire_european_experts:0 "Hire European Experts"
   PB_RUS_kiril_a_profitable_colony:0 "Creating a Profitable Colony"
   PB_RUS_kiril_russias_african_success:0 "Russia's African Success"
+  PB_RUS_kiril_the_high_command:0 "The High Command"
+  PB_RUS_kiril_the_imperial_air_force:0 "The Imperial Air Force"
+  PB_RUS_kiril_supporting_the_ground:0 "Supporting the Ground"
+  PB_RUS_kiril_working_one_fist:0 "Working as One Fist"
+  PB_RUS_kiril_fighter_policy:0 "Fighter Policy"
+  PB_RUS_kiril_speed_king_of_air:0 "Speed is King of the Air"
+  PB_RUS_kiril_promoting_advancements_flight_thought:0 "Prompt Advancements in Flight Thought"
+  PB_RUS_kiril_we_are_new_tomorrow:0 "We are the New Tomorrow"
+  PB_RUS_kiril_no_bomb_shall_fall_our_soil:0 "No Bomb Shall Fall on Our Soil"
+  PB_RUS_kiril_the_imperial_army:0 "The Imperial Army"
+  PB_RUS_kiril_will_of_the_horde:0 "Will of the Horde"
+  PB_RUS_kiril_war_demands_sacrifice:0 "War Demands Sacrifice"
+  PB_RUS_kiril_supplies_from_east_to_west:0 "Supplies from East to West"
+  PB_RUS_kiril_imperial_commissars:0 "Imperial Comissars"
+  PB_RUS_kiril_stimulant_trials:0 "Stimulant Trials"
+  PB_RUS_kiril_mass_produced_heroism:0 "Mass Produced Heroism"
+  PB_RUS_kiril_not_one_step_back:0 "§RNot One Step Back!§!"
+  PB_RUS_kiril_the_imperial_navy:0 "The Imperial Navy"
+  PB_RUS_kiril_training_a_new_generation:0 "Training A New Generation"
+  PB_RUS_kiril_doctrines_for_modern_age:0 "Doctrines for the Modern Age"
+  PB_RUS_kiril_advancing_battleships:0 "Advance Battleship Technology"
+  PB_RUS_kiril_the_silent_sea_hunters:0 "The Silent Sea Hunters"
+  PB_RUS_kiril_french_naval_advisors:0 "French Naval Advisors"
+  PB_RUS_kiril_french_designs:0 "French Designs"
+  PB_RUS_kiril_rus_rules_waves:0 "Rus Rules the Waves"
   #ALEXEI FOCUS
   PB_RUS_alexei_ascendant:0 "§RAlexei Ascendant§!"
   PB_RUS_alexei_ascendant_desc:0 "placeholder"
