--- a/localisation/PB_Italy_l_english.yml
+++ b/localisation/PB_Italy_l_english.yml
@@ -3,6 +3,9 @@
   ##########################
   # IDEAS
   ##########################
+PB_IST_Last_Leg:0 "Our Last Leg"
+PB_IST_Last_Leg_desc:0 "The Italian civil war has been a long conflict. Many men have died. Many guns have failed their users. Many boys have been sacrificed for the greatness of Italy. All is in vain. \n\nWe have been cornered into Savoy by the Italian army, our cause lost in the eyes of those loyal and those opposed. We're on our last leg now and it will only take a swift kick to the knee for us to fall."
+
 PB_ITA_treaty_of_anzio_1:0 "Treaty of Anzio"
 PB_ITA_treaty_of_anzio_1_desc:0 "While Italy did support the Entente at the end of the war, it was always clear that this loyalty was forced upon Italy through Entente pressure. Thus, Italy had to pay for their crimes against the winning powers of Europe and for joining the Bourbon-alliance against the Entente powers. However, due to Italy’s support in the later years of the war, the great powers actively decided to not unreasonably punish Italy, like they did with France. Instead, Italy was forced to demobilize its army and put future restrictions upon its army, such as restricting the use of chemical warfare and experimental tank warfare. The Italian navy and airforce also were decreased due to the treaty and Italy had to pay a small amount to the winning powers."
 PB_ITA_treaty_of_anzio:0 "Treaty of Anzio"
@@ -23,11 +26,14 @@ PB_ITA_Left_Milita_Support_1_desc:0 "Desperate times call for desperate measures
 
 PB_ITA_PSI_rises_to_power:0 "Victory for the PSI"
 PB_ITA_The_Nullista_Clique:0 "Bombacci's View on Maximalism"
+PB_ITA_The_Nullista_Clique_desc:0 "Leader of the Maximalist Fasces Clique, Nicola Bombacci views Maximalism in a different light to most others in his party. Bombacci believes not just in revolution, but a total revolution with the endgoal the total destruction of bourgeoisie democracy, with it being replaced by a proletariat dictatorship. While others call him an authoritarian statist and a semi-imperialists, Bombacci knows that they are simply afraid of the truth: revolution can only be preserved by a strong man and a strong state." 
 PB_ITA_The_Maximalist_Mainstream:0 "Consolidate the Maximalist Movement"
+PB_ITA_The_Maximalist_Mainstream_desc:0 "The Maximalist mainstream of the PSI has been divided since the inception of the party. Ranging from a number of issues, the main issue of the maximalists remains their view on revolution. While some see revolution less literal and seek to induce revolution through democratic means and the ballot, others are less democracy-loving and seek to introduce the revolution with blades and guns, organizing themselves in large collective paramilitaries. We need to find common ground if we want to govern."
 PB_ITA_Reforming_Suffrage:0 "Reform Electoral Suffrage"
 PB_ITA_Break_Elitist_Democracy:0 "Break Limited Democracy"
 PB_ITA_They_who_hold_half_the_sky:0 "Women hold up half the Sky"
 PB_ITA_Refuse_Capitalist_Cooperation:0 "Refuse Cooperation with Capitalists"
+PB_ITA_Refuse_Capitalist_Cooperation_desc:0 "Following in the proud tradition of the maximalists before him, Bombacci refuses to cooperate with any capitalist party. No liberal, conservative or reactionary party is worthy to cooperate with due to their false tricks and bourgeoisie shenanigans. Instead, the PSI will stand alone and reach a purer form of Maximalism that can lead the Italian people when they're ready." 
 PB_ITA_Label_them_Social_Imperialists:0 "Label them \"Social Imperialists\""
 PB_ITA_Mobilize_the_People:0 "Mobilize the Peasants"
 PB_ITA_Answer_against_White_Terror:0 "Rural Red Terror"
@@ -41,18 +47,34 @@ PB_ITA_Consider_Minimum_Wage:0 "Implement Minimum Wage"
 PB_ITA_Enshrine_Labourers_Rights:0 "Protect Workers Rights"
 PB_ITA_Caring_State_Vision:0 "A Social Revolution"
 PB_ITA_Big_Tent_Maximalism:0 "Modigliani's Big Tent"
+PB_ITA_Big_Tent_Maximalism_desc:0 "With now Giuseppe Emanuele Modigliani at the head of the PSI, the party has entered a new age of understanding and putting aside differences. Modigliani has done it: he has turned the previously eternal bickering members of his party into one. Now only his big tent party remains."
 PB_ITA_Bombacci_goes_Solo:0 "Against Moderate Revisionism" 
 PB_ITA_PSU_rises_to_power:0 "Victory for the PSU"
 PB_ITA_Party_of_Turati:0 "Party of Turati"
+PB_ITA_Party_of_Turati_desc:0 "Once part of the Maximalists, Turati has definitely not moderated his tone since his early days. However, Turati has accepted one simple truth: to bring true socialism, one can not just expect it to be given socialism through violent revolution. Bloodshed only creates oppression, so revolution is simply not an option. Instead of revolution, Turati opts for gradual evolution, change through reform and similair ideals."
 PB_ITA_Rethink_Bakunin:0 "Rethink Bakuninist Philosophy"
 PB_ITA_Expand_Union_Freedom:0 "Support the CGdL"
 PB_ITA_Introduce_Workplace_Democracy:0 "Limited Workplace Democracy"
 PB_ITA_Rosselli_Liberal_Socialism:0 "Shake Hands with Rosselli"
+PB_ITA_Rosselli_Liberal_Socialism_desc:0 "Once part of the same moderate maximalist fraction as Turati, Rosselli also left the PSI when it accepted revolutionary methods. However, Rosselli did not embrace the same kind of socialism Turati embraced. Instead, Rosselli formulated a new way, calling it \"liberal socialism\", defining the importance of democracy and freedom to socialism and rejecting any form of despotism under socialism as not the real way forward."
 PB_ITA_Friends_with_the_King:0 "Improve Rural Education"
 PB_ITA_Poverty_Relief_Act:0 "Poverty Relief Act"
 PB_ITA_Nationalize_Key_Assets:0 "Nationalize Key Sectors"
 PB_ITA_Rosselli_takes_the_Wheel:0 "Rosselli's Spin on Socialism"
 PB_ITA_Buozzi_Succeeds:0 "Party of Unionists" 
+PB_ITA_PLI_rises_to_power:0 "Victory for the PLI" 
+PB_ITA_Einaudi_balances_the_Boat:0 "Einaudi's Liberalist Concept"
+PB_ITA_Soleri_saves_the_Party:0 "A Party for Soleri"
+PB_ITA_The_Freedom_of_Market:0 "Freedom of Market, Freedom of People"
+PB_ITA_Italian_concept_of_Liberalism:0 "Liberalism outside of Economics"
+PB_ITA_Cut_Statist_Tendency:0 "Lessen Grinding Statism"
+PB_ITA_Expand_Civil_Liberty:0 "The Liberty to Be"
+PB_ITA_Secular_to_the_Bone:0 "Secular to the Bone"
+PB_ITA_Reform_Public_Education:0 "Reforming Public Education"
+PB_ITA_Ultranationalism_as_a_Moral_Disease:0 "The Moral Disease"
+PB_ITA_Soleris_Constitution:0 "A Liberalist Constitution"
+PB_ITA_Spread_Naples_Liberty:0 "Copying the Naples Model"
+PB_ITA_Soleri_has_done_It:0 "It Won't Happen Here"
 
 PB_The_Diplomatic_King:0 "The Charming King"
 
