Italian Civil War Work, Fall of Cities Event GFX, Temporary Fix to ICW Peace issue

--- a/localisation/PB_peace_popup_l_english.yml
+++ b/localisation/PB_peace_popup_l_english.yml
@@ -1,10 +1,10 @@
 ﻿l_english:
 
- PB_PEACE_POPUP_TITLE:0 "INCOMING COMMUNIQUE"
+ PB_PEACE_POPUP_TITLE:0 "§OINCOMING COMMUNIQUE§!"
  PB_PEACE_POPUP_DESCRIPTION:0 "[GetWarStatus]"
  PB_PEACE_POPUP_FLAVOR:0 "[GetFlavor]"
 
- PB_PEACE_POPUP_CLOSE:0 "DISMISS"
+ PB_PEACE_POPUP_CLOSE:0 "§ODISMISS§!"
 
  PB_PEACE_POPUP_COUNTRY_PLURAL:0 " and their allies "
  PB_PEACE_POPUP_COUNTRY_SINGULAR:0 " "
@@ -20,19 +20,19 @@
 
  PB_PEACE_POPUP_WAR_CONCLUSION_MALAYA_LOSS:0 "The §YMalayisan Insurgency§! has been crushed [winning_country.GetFlag] with the §Y[winning_country.GetNameDef]§![GetWinnerAllies] defeating the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies]."
  PB_PEACE_POPUP_WAR_CONCLUSION_MALAYA_VICTORY:0 "The §YMalayisan Insurgency§! has been victorious with the [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] defeating the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies]."
- PB_PEACE_POPUP_WAR_CONCLUSION_ICA_LOSS:0 "The[winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the[losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] and restored order in the British Isles."
- PB_PEACE_POPUP_WAR_CONCLUSION_MON_LOSS:0 "The[winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the[losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] and established a loyal regime in the Eurasian steppes."
- PB_PEACE_POPUP_WAR_CONCLUSION_MAN_LOSS:0 "The[winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have toppled government of the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] and installed a more pliable regime."
- PB_PEACE_POPUP_WAR_CONCLUSION_BRAZIL_WARS:0 "The[winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] as the wars to reunify Brazil drag on."
- PB_PEACE_POPUP_WAR_CONCLUSION_ENG_LOSS:0 "The[winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have forced the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] to withdraw from Ireland, securing full Irish independence."
- PB_PEACE_POPUP_GREAT_WAR_WAR_CONCLUSION_LEAGUE:0 "The[winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] as the Second Great War comes to a close."
- PB_PEACE_POPUP_GREAT_WAR_WAR_CONCLUSION_PACT:0 "The[winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] as the Second Great War comes to a close."
+ PB_PEACE_POPUP_WAR_CONCLUSION_ICA_LOSS:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] and restored order in the British Isles."
+ PB_PEACE_POPUP_WAR_CONCLUSION_MON_LOSS:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] and established a loyal regime in the Eurasian steppes."
+ PB_PEACE_POPUP_WAR_CONCLUSION_MAN_LOSS:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have toppled government of the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] and installed a more pliable regime."
+ PB_PEACE_POPUP_WAR_CONCLUSION_BRAZIL_WARS:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] as the wars to reunify Brazil drag on."
+ PB_PEACE_POPUP_WAR_CONCLUSION_ENG_LOSS:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have forced the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] to withdraw from Ireland, securing full Irish independence."
+ PB_PEACE_POPUP_GREAT_WAR_WAR_CONCLUSION_LEAGUE:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] as the Second Great War comes to a close."
+ PB_PEACE_POPUP_GREAT_WAR_WAR_CONCLUSION_PACT:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] as the Second Great War comes to a close."
 
  #Capitulation (war continuing) events
 
- PB_PEACE_POPUP_WAR_CONCLUSION_DEFAULT:0 "The[winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAlliesWithHas]defeated the[losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies]in a war."
+ PB_PEACE_POPUP_WAR_CONCLUSION_DEFAULT:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAlliesWithHas]defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies]in a war."
  
- PB_PEACE_POPUP_WAR_CONTINUING_DEFAULT:0 "The[winning_country.GetFlag] §Y[winning_country.GetNameDef]§! has defeated the[losing_country.GetFlag] §Y[losing_country.GetNameDef]§! in an ongoing conflict."
+ PB_PEACE_POPUP_WAR_CONTINUING_DEFAULT:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§! has defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§! in an ongoing conflict."
  
  #Flavor loc
 
