Revert "Italian Civil War Work, Fall of Cities Event GFX, Temporary Fix to ICW Peace issue"
This reverts commit c0d0ddd85fe83c349f3c90f8ab9c3bf76ce60845.

--- a/localisation/PB_equipment_l_english.yml
+++ b/localisation/PB_equipment_l_english.yml
@@ -1,5 +1,40 @@
 ﻿l_english:
 
+ infantry_equipment_1933:0 "Interwar Infantry Equipment"
+ infantry_equipment_1933_short:0 "Interwar Eq."
+ infantry_equipment_1933_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs."
+
+ infantry_rations:0 "Infantry Rations"
+ infantry_rations3:0 "Improved Meal Supplments"
+ infantry_rations4:0 "Enhanced Water Tablets"
+ rations_equipment_1:0 "Rations"
+ rations_equipment_2:0 "MREs"
+ rations_equipment_3:0 "Military Survival Kits"
+ infantry_drugs:0 "Basic Stimulant Manufacturing"
+ infantry_drugs_desc:0 "Utilizing a combination of various medical science developments, chemistry and electronics, our technical teams can begin creating a whole galaxy of multi-colored uppers, downers, screamers, laughers and mindbreaking psychedelics for combat and civilian use. All under the table and very legal, of course."
+ infantry_drugs_pep_pills:0 "Pep Pills"
+ infantry_drugs_thalasin:0 "Thalasin"
+ infantry_drugs_melange:0 "Melange"
+ infantry_drugs_victory_tonic:0 "Victory Tonic"
+
+ infantry_drugs_2:0 "Industrial Grade Stimulant Manufacturing"
+ infantry_drugs_soma:0 "Soma"
+ infantry_drugs_obetrol:0 "Obetrol"
+ infantry_drugs_milk_plus:0 "Milk Plus"
+ infantry_drugs_substance_f:0 "Substance F"
+
+ infantry_drugs_3:0 "Enhanced Industrial Stimulant Manufacturing"
+ infantry_strength_booster:0 "Musculo-Skeletal Gene Treatment"
+ infantry_intelligence_booster:0 "Ocular Injected Hypothalamus Therapy"
+
+ infantry_standard_rounds:0 "Standard Munitions"
+ infantry_flechette_rounds:0 "Flechette Munitions"
+ infantry_armor_piercing_rounds:0 "Armor Piercing Munitions"
+ infantry_incendiary_rounds:0 "Incendiary Munitions"
+ infantry_explosive_rounds:0 "Explosive Munitions"
+
+ WMDs:0 "Weapons of Mass Destruction"
+
  gw_tank_equipment:0 "Great War Landship"
  gw_tank_equipment_short:0 "Great War Landship"
  gw_tank_equipment_desc:0 "Landships in World War I were developed separately and simultaneously by the United Kingdom and France as a means to break the deadlock of trench warfare on the Western Front. The name Landship was adopted by the British during the early stages of their development, as a security measure to conceal their purpose. Early landships were armed with machineguns and small cannons, moved slowly, and were armored only enough to stop small arms fire."
