Fixing the Reverted Revert of the Reversion

--- a/localisation/PB_Technologies_l_english.yml
+++ b/localisation/PB_Technologies_l_english.yml
@@ -1,4 +1,6 @@
-﻿ infantry_equipment_1933:0 "Interwar Infantry Equipment"
+﻿  l_english:
+ 
+ infantry_equipment_1933:0 "Interwar Infantry Equipment"
  infantry_equipment_1933_short:0 "Interwar Eq."
  infantry_equipment_1933_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs."
 
@@ -19,7 +21,6 @@
  infantry_drugs_soma:0 "Soma"
  infantry_drugs_obetrol:0 "Obetrol"
  infantry_drugs_milk_plus:0 "Milk Plus"
- l_english:
  
  infantry_drugs_substance_f:0 "Substance F"
 
