Small stuff in the Benelux

--- a/localisation/PB_Parties_l_english.yml
+++ b/localisation/PB_Parties_l_english.yml
@@ -331,14 +331,18 @@
   HOL_cn_party:0 "ARP"
   HOL_ss_party_long:0 "Sociaal-Democratische Arbeiderspartij"
   HOL_ss_party:0 "SDAP"
-  HOL_lb_party_long:0 "Vrijzinnig Democratische Bond"
-  HOL_lb_party:0 "VDB"
+  HOL_lb_party_long:0 "Vrijzinnige Bond"
+  HOL_lb_party:0 "VB"
   HOL_jc_party_long:0 "Verlichte Jacobijnen Partij"
   HOL_jc_party:0 "VJP"
   HOL_rc_party_long:0 "Staatkundig Gereformeerde Partij"
   HOL_rc_party:0 "SGP"
-  HOL_ni_party_long:0 "Jan Baars Partij"
-  HOL_ni_party:0 "JBP"
+  HOL_ni_party_long:0 "Dietsche Actualisten Partij"
+  HOL_ni_party:0 "DAP"
+  HOL_ds_party_long:0 "Dietsche Leger"
+  HOL_ds_party:0 "DL"
+  HOL_an_party_long:0 "Middenstand Belangen Partij"
+  HOL_an_party:0 "MBP"
 
   BRT_ss_party_long:0 "Strollad Emrenerien Vreiz"
   BRT_ss_party:0 "SEV"
@@ -555,6 +559,23 @@
   SRU_ds_party_long:0 "League of Nations Military Administration"
   SRU_ni_party:0 "-"
   SRU_ni_party_long:0 "-"
+
+  WLA_jc_party:0 "FCRW"
+  WLA_jc_party_long:0 "Front Commun Révolutionnaire de la Wallonie"
+  WLA_ss_party:0 "PT"
+  WLA_ss_party_long:0 "Parti des Travailleurs"
+  WLA_lb_party:0 "PD"
+  WLA_lb_party_long:0 "Parti Démocrate"
+  WLA_cn_party:0 "PdlVW"
+  WLA_cn_party_long:0 "Parti de la Vieille Wallonie"
+  WLA_rc_party:0 "PUP"
+  WLA_rc_party_long:0 "Parti de l'Unité Populaire"
+  WLA_an_party:0 "-"
+  WLA_an_party_long:0 "-"
+  WLA_ds_party:0 "AW"
+  WLA_ds_party_long:0 "Armée Wallone"
+  WLA_ni_party:0 "FPF(W)"
+  WLA_ni_party_long:0 "Front Populaire Français (Wallonie)"
   
  ############
  # POLITICAL PARTY TEMPLATE 
