--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -624,7 +624,7 @@
 
   French_flavour.18.t:0 "The Pride Of France"
   French_flavour.18.d:0 ""
-  French_flavour.18.a:0 "A Ship To Rival All Of Britannia"
+  French_flavour.18.a:0 "A ship to rival all of Britannia"
 
   French_flavour.19.t:0 "Suspicious Citizen Number: 8012234"
   French_flavour.19.d:0 "Target: 8012234\n\nName: Julien\n\nSurname: Couture\n\nDOB: 21/06/1905\n\nSex: Male\n\nFeatures:\nWhite pale skin with brown hair and blue eyes. He is often found wearing trench coat like clothing though that may be attributed to his recent actions. It is advised that you question locals to gain further knowledge.\n\nReasoning:\nEye witnesses account Mr. Couture entering a suspected Jewish safe haven on numerous occasions, each occasion he is seen holding provisions of all sorts albeit with no definitive knowledge on why he is bringing such provisions in to his place of work when questioned by local authorities. He is suspected to be harbouring Jews in his clothing store that he owns though a recent raid has found nothing of confirming material, more investigation may be required to reach suspected results. His mother was also recently hanged for failing to comply with orders (unspecified) given by SP individuals. Chief commissioner has recommended that Mr. Couture be removed despite the lacking intel.\n\nCONFIRMATION CODE: 57385719\n\nThis person will be considered dead upon the handing of this file unless otherwise advised. "
